[gd_scene load_steps=3 format=3 uid="uid://nakghjpyqj8t"]

[ext_resource type="Script" uid="uid://cbi7epacpl5vp" path="res://assets/scripts/Menu_bar.gd" id="1_id0nx"]

[sub_resource type="Environment" id="Environment_fch18"]
background_mode = 1
ambient_light_color = Color(0.12549, 0.12549, 0.12549, 1)
ambient_light_energy = 5.76

[node name="3D space" type="Node3D"]

[node name="GUI" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="3D" type="Control" parent="GUI"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="2D" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_id0nx")

[node name="MenuBar" type="MenuBar" parent="GUI/2D"]
custom_minimum_size = Vector2(96, 32)
layout_mode = 0
offset_right = 96.0
offset_bottom = 40.0
tooltip_text = "File"

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/2D/MenuBar"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="File" type="MenuButton" parent="GUI/2D/MenuBar/HBoxContainer"]
layout_mode = 2
text = "File"
switch_on_hover = true
item_count = 4
popup/item_0/text = "New"
popup/item_0/id = 0
popup/item_1/text = "Load"
popup/item_1/id = 1
popup/item_2/text = "Save"
popup/item_2/id = 2
popup/item_3/text = "Quit"
popup/item_3/id = 3

[node name="Load" type="FileDialog" parent="GUI/2D/MenuBar/HBoxContainer/File"]
title = "Load Level"
initial_position = 1
size = Vector2i(720, 480)
ok_button_text = "Open"
cancel_button_text = "Nevermind"
mode_overrides_title = false
file_mode = 0
root_subfolder = "res://Levels"
filters = PackedStringArray("*.bin", "*.bak")

[node name="Save" type="FileDialog" parent="GUI/2D/MenuBar/HBoxContainer/File"]
title = "Save Level"
initial_position = 1
size = Vector2i(720, 480)
cancel_button_text = "Nevermind"
access = 2

[node name="New" type="ConfirmationDialog" parent="GUI/2D/MenuBar/HBoxContainer/File"]
title = "New Level?"
initial_position = 1
size = Vector2i(647, 80)
cancel_button_text = "Nevermind"

[node name="Label" type="Label" parent="GUI/2D/MenuBar/HBoxContainer/File/New"]
offset_right = 40.0
offset_bottom = 23.0
text = "Are you sure you want to make a new level? (Any progressed not saved will be lost)"
horizontal_alignment = 1

[node name="Edit" type="MenuButton" parent="GUI/2D/MenuBar/HBoxContainer"]
layout_mode = 2
text = "Edit"
switch_on_hover = true
item_count = 6
popup/item_0/text = "Undo"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_1/text = "Redo"
popup/item_1/id = 1
popup/item_1/disabled = true
popup/item_2/text = "Copy"
popup/item_2/id = 2
popup/item_2/disabled = true
popup/item_3/text = "Paste"
popup/item_3/id = 3
popup/item_3/disabled = true
popup/item_4/text = "Create"
popup/item_4/id = 4
popup/item_5/text = "Delete"
popup/item_5/id = 5

[node name="View" type="MenuButton" parent="GUI/2D/MenuBar/HBoxContainer"]
layout_mode = 2
disabled = true
text = "View"
switch_on_hover = true
item_count = 4
popup/item_0/text = "Show Barycenters"
popup/item_0/checkable = 1
popup/item_0/checked = true
popup/item_0/id = 0
popup/item_1/text = "Show Angles And Velocities"
popup/item_1/checkable = 1
popup/item_1/id = 1
popup/item_2/text = "Show Gravitational Affectors"
popup/item_2/checkable = 1
popup/item_2/checked = true
popup/item_2/id = 2
popup/item_3/text = "Show Level Bounds"
popup/item_3/checkable = 1
popup/item_3/checked = true
popup/item_3/id = 3

[node name="Options" type="MenuButton" parent="GUI/2D/MenuBar/HBoxContainer"]
layout_mode = 2
disabled = true
text = "Options"
switch_on_hover = true

[node name="ErrorPop" type="AcceptDialog" parent="GUI/2D"]
title = "Error Loading File"
initial_position = 2
unresizable = true
dialog_text = "This is not an Orbient or Astronomical Leap level file."

[node name="Level" type="Marker3D" parent="."]
process_mode = 3
gizmo_extents = 0.0

[node name="Camera3D" type="Camera3D" parent="Level"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 145.21, 119.675, 344.15)
environment = SubResource("Environment_fch18")
fov = 39.7
size = 0.001
near = 0.001

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Level"]
transform = Transform3D(0.454006, -0.539056, 0.709434, 0, 0.796224, 0.605002, -0.890999, -0.274675, 0.36149, 0, 2.17467, 0)

[connection signal="file_selected" from="GUI/2D/MenuBar/HBoxContainer/File/Load" to="GUI/2D" method="_on_load_file_selected"]
[connection signal="confirmed" from="GUI/2D/MenuBar/HBoxContainer/File/New" to="GUI/2D" method="_on_new_confirmed"]
